outputs/csi300-test/eoh/2025-07-28_13-42-39/evaluations/problem_eval-344829887397065685_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 1
    defined as the 20-day rate of change (ROC) in closing prices, and further incorporates the standard deviation of the last 5 days' closing prices to add a volatility component.}
                                                                                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)
